--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^7.0.1",
     "sass": "^1.81.0",
     "uuid": "^11.0.3"
