--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^7.0.1",
+    "react-select": "^5.8.3",
     "sass": "^1.81.0",
     "uuid": "^11.0.3"
   },
