--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "i18next": "^24.2.0",
+    "i18next-browser-languagedetector": "^8.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.2.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^7.0.1",
     "react-select": "^5.8.3",
